# maliput_object

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/: run_scan_build
.github/workflows/: build.yml  sanitizers.yml  scan_build.yml
include/maliput_object/test_utilities/: mock_math.h
maliput_object/: CHANGELOG.rst  CMakeLists.txt  package.xml
maliput_object/include/maliput_object/: CMakeLists.txt
maliput_object/include/maliput_object/api/: bounding_region.h  object.h  object_book.h  object_query.h  (+2 more)
maliput_object/src/: CMakeLists.txt
maliput_object/src/api/: CMakeLists.txt  object.cc  overlapping_type.cc
maliput_object/src/base/: CMakeLists.txt  bounding_box.cc  manual_object_book.cc  simple_object_query.cc
maliput_object/src/loader/: CMakeLists.txt  loader.cc
maliput_object/test/: CMakeLists.txt  dumb_file.cc
maliput_object/test/api/: CMakeLists.txt  bounding_region_test.cc  object_book_test.cc  object_maliput_query_test.cc  object_query_test.cc  object_test.cc  overlapping_type_test.cc
maliput_object/test/base/: CMakeLists.txt  bounding_box_test.cc  manual_object_book_test.cc  simple_object_query_test.cc
maliput_object/test/loader/: CMakeLists.txt  loader_test.cc
maliput_object_py/: CHANGELOG.rst  package.xml
maliput_object_py/maliput_object/: __init__.py
maliput_object_py/src/bindings/: CMakeLists.txt  api_py.cc
maliput_object_py/test/api/: api_test.py
test/api/: object_book_test.cc  object_query_test.cc  object_test.cc
test/base/: manual_object_book_test.cc
test/loader/: CMakeLists.txt  loader_test.cc
(+6 files in other folders)
